lesson-43/k8s/example-2/network-policies/default-deny.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: example-2
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
